--- a/packages/remark-preset/package.json
+++ b/packages/remark-preset/package.json
@@ -132,7 +132,7 @@
     "lint:md": "remark --frail .",
     "lint:pkg": "npmPkgJsonLint ./package.json",
     "outdated": "yarn outdated",
-    "postinstall": "run-s flow:install",
+    "postupdate": "run-s flow:install",
     "typecheck": "flow check .",
     "update": "yarn upgrade-interactive --latest",
     "watch": "rollup -c -w"
