fix: fix order of post scripts

--- a/package.json
+++ b/package.json
@@ -77,12 +77,12 @@
     "deps:check:verify": "yarn check --verify-tree",
     "flow:fix": "flow-mono create-symlinks ./build/.flowconfig",
     "flow:install": "lerna run flow:install",
-    "install:pkgs": "run-s bootstrap flow:fix flow:install",
     "lint": "run-s lint:md lint:pkg",
     "lint:md": "remark --frail .",
     "lint:pkg": "npmPkgJsonLint ./package.json",
     "outdated": "yarn outdated",
-    "postinstall": "run-s install:pkgs",
+    "postbootstrap": "flow-mono create-symlinks ./build/.flowconfig",
+    "postinstall": "run-s bootstrap",
     "postupdate": "lerna run postupdate",
     "prepublish": "run-s build",
     "prepublishOnly": "run-s check",
