--- a/packages/babel-preset/package.json
+++ b/packages/babel-preset/package.json
@@ -16,6 +16,7 @@
     "eslint-plugin-flowtype": "4.2.0",
     "eslint-plugin-import": "2.18.2",
     "eslint-plugin-markdown": "1.0.0",
+    "eslint-plugin-unicorn": "10.0.0",
     "flow-bin": "0.106.3",
     "flow-typed": "2.6.1",
     "npm-package-json-lint": "3.7.0",
