--- a/packages/eslint-config-react/package.json
+++ b/packages/eslint-config-react/package.json
@@ -43,6 +43,7 @@
     "eslint-plugin-import": "2.18.2",
     "eslint-plugin-markdown": "1.0.0",
     "eslint-plugin-optimize-regex": "1.1.6",
+    "eslint-plugin-unicorn": "10.0.0",
     "flow-bin": "0.106.3",
     "flow-typed": "2.6.1",
     "npm-package-json-lint": "3.7.0",
