--- a/packages/stylelint-config-styled-components/package.json
+++ b/packages/stylelint-config-styled-components/package.json
@@ -42,6 +42,7 @@
     "eslint-plugin-flowtype": "4.2.0",
     "eslint-plugin-import": "2.18.2",
     "eslint-plugin-markdown": "1.0.0",
+    "eslint-plugin-unicorn": "10.0.0",
     "flow-bin": "0.106.3",
     "flow-typed": "2.6.1",
     "npm-run-all": "4.1.5",
