feat(npm-package-json-lint-config): add description format rule
BREAKING CHANGE: package.json description fields can no longer end with a period

--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -46,7 +46,7 @@
     "eslint-plugin-unicorn": "14.0.1",
     "flow-bin": "0.114.0",
     "flow-typed": "2.6.2",
-    "npm-package-json-lint": "4.5.0",
+    "npm-package-json-lint": "4.6.0",
     "npm-run-all": "4.1.5",
     "remark-cli": "7.0.1",
     "remark-lint-blockquote-indentation": "1.0.3",
@@ -122,7 +122,7 @@
     "build": "rollup -c",
     "check": "run-s audit lint typecheck",
     "clean": "trash **.DS_Store *.log dist node_modules",
-    "flow:install": "flow-typed update",
+    "flow:install": "NODE_OPTIONS=--max_old_space_size=24000 flow-typed update",
     "lint": "run-s lint:js lint:md lint:pkg",
     "lint:js": "eslint . --ext .js,.md",
     "lint:md": "remark --frail .",
