--- a/packages/eslint-config-react/package.json
+++ b/packages/eslint-config-react/package.json
@@ -5,7 +5,7 @@
   "author": "Dennis Torres <djtorres0@gmail.com>",
   "bugs": "https://github.com/psirenny/monorepo/issues",
   "devDependencies": {
-    "@babel/core": "7.10.1",
+    "@babel/core": "7.10.2",
     "@babel/plugin-external-helpers": "7.10.1",
     "@babel/plugin-proposal-class-properties": "7.10.1",
     "@babel/plugin-proposal-decorators": "7.10.1",
@@ -27,7 +27,7 @@
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
     "@babel/plugin-syntax-import-meta": "7.10.1",
     "@babel/plugin-transform-flow-strip-types": "7.10.1",
-    "@babel/preset-env": "7.10.1",
+    "@babel/preset-env": "7.10.2",
     "@babel/preset-flow": "7.10.1",
     "babel-eslint": "10.1.0",
     "babel-plugin-preval": "5.0.0",
@@ -81,7 +81,7 @@
     "retext-spell": "4.0.0",
     "retext-syntax-mentions": "2.1.0",
     "retext-syntax-urls": "2.0.0",
-    "rollup": "2.11.2",
+    "rollup": "2.12.0",
     "rollup-plugin-babel": "5.0.0-alpha.0",
     "rollup-plugin-flow-entry": "0.3.4",
     "trash-cli": "3.0.0",
@@ -114,6 +114,7 @@
     "check": "run-s audit lint typecheck",
     "clean": "trash **.DS_Store *.log dist node_modules",
     "flow:install": "flow-typed update",
+    "flow-typed": "flow-typed",
     "lint": "run-s lint:js lint:md lint:pkg",
     "lint:js": "eslint . --ext .js,.md",
     "lint:md": "remark --frail .",
